[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelbasedimputer"
version = "0.1.0"
description = "A model-based imputer for categorical and numerical features"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
    "scikit-learn>=1.1",
    "pandas>=1.3",
    "numpy>=1.20"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
  "pytest",
  "scikit-learn",
  "pandas",
  "numpy",
  "category_encoders"
]